fixed alignement now

--- a/app/assets/stylesheets/components/_brands_container.scss
+++ b/app/assets/stylesheets/components/_brands_container.scss
@@ -15,3 +15,7 @@
 
 
 }
+
+.brands-box {
+  width: 900px;
+}
